--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ personal_*
 pkg/
 # The line "src/" was removed as it conflicts with the project's actual source directory.
 # The directory "internet-usage-monitor/" below handles makepkg's source extraction.
-internet-usage-monitor/ # Specific name of makepkg's source extraction dir for this project
+internet-usage-monitor/ # Specific name of makepkg's source extraction dir for this project (if $SRCDEST is project root)
+src/internet-usage-monitor/ # makepkg's source dir if $SRCDEST is project_root/src
 *.pkg.tar.zst
 *.pkg.tar.xz
