--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ MAINTAINER_NOTES.md
 
 # AUR makepkg build artifacts
 pkg/
+.ssh/ # Ignore any local SSH config accidentally created in project root
 # The line "src/" was removed as it conflicts with the project's actual source directory.
 # The directory "internet-usage-monitor/" below handles makepkg's source extraction.
 internet-usage-monitor/ # Specific name of makepkg's source extraction dir for this project (if $SRCDEST is project root)
