--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,11 @@ MAINTAINER_NOTES.md
 *.patch
 *.diff
 
+# AUR Packaging Files (should be in a separate repository)
+PKGBUILD
+.SRCINFO
+*.install
+
 # AUR makepkg build artifacts
 pkg/
 src/
